--- a/_posts/2019-03-07-DDQN.md
+++ b/_posts/2019-03-07-DDQN.md
@@ -2,41 +2,68 @@
 layout: posts
 author: Huan
 title: DDQN
-
-
 ---
 
 A **Double Deep Q Network (DDQN)** implementation in tensorflow with random experience replay.
-
-Environment from OpenAI's gym: CartPole-v0
+The code is tested with Gym's discrete action space environment, CartPole-v0 on Colab.
 
 [Full code](https://github.com/ChuaCheowHuan/reinforcement_learning/tree/master/DQN_variants/DDQN)
 
----
-<br>
-**Notations:**
+## Notations:
 
-Model network = $$Q_{\theta}$$ \\
-Model parameter = $$\theta$$ \\
-Model network Q value = $$Q_{\theta}$$ (s, a) \\
-<br>
-Target network = $$Q_{\phi}$$ \\
-Target parameter = $$\phi$$ \\
-Target network Q value = $$Q_{\phi}$$ ($$s^{'}$$, $$a^{'}$$)
+Model network = $$Q_{\theta}$$
 
----
-<br>
-**Equations:**
+Model parameter = $$\theta$$
 
-TD target = r (s, a) $$+$$ $$\gamma$$ $$Q_{\phi}$$ ($$s^{'}$$, $$argmax_{a^{'}}$$ $$Q_{\theta}$$ (s$$^{'}$$, a$$^{'}$$)) \\
-<br>
-TD  error = (TD target) $$-$$ (Model network Q value) \\
-$$\hspace{26pt}$$
-= [r (s, a) $$+$$ $$\gamma$$ $$Q_{\phi}$$ ($$s^{'}$$, $$argmax_{a^{'}}$$ $$Q_{\theta}$$ (s$$^{'}$$, a$$^{'}$$))] $$-$$ $$Q_{\theta}$$ (s, a)
+Model network Q value =
+$$Q_{\theta}$$
+(s, a)
+
+Target network = $$Q_{\phi}$$
+
+Target parameter = $$\phi$$
+
+Target network Q value =
+$$Q_{\phi}$$
+($$s^{'}$$,
+$$a^{'}$$)
 
 ---
-<br>
-**Implementation details:**
+
+## Equations:
+
+TD target =
+r (s, a)
+$$+$$
+$$\gamma$$
+$$Q_{\phi}$$
+($$s^{'}$$,
+$$argmax_{a^{'}}$$
+$$Q_{\theta}$$
+(s$$^{'}$$,
+a$$^{'}$$))
+
+TD error =
+(TD target)
+$$-$$
+(Model network Q value)
+=
+[r (s, a)
+$$+$$
+$$\gamma$$
+$$Q_{\phi}$$
+($$s^{'}$$,
+$$argmax_{a^{'}}$$
+$$Q_{\theta}$$
+(s$$^{'}$$,
+a$$^{'}$$))]
+$$-$$
+$$Q_{\theta}$$
+(s, a)
+
+---
+
+## Key implementation details:
 
 Create a placeholder to feed Q values from model network:
 
@@ -60,7 +87,8 @@ _, loss = self.sess.run([self.optimizer, self.loss],
                                      self.model_s_next_Q_val: model_s_next_Q_val})
 ```
 
-Select minibatch actions with largest Q values from model network, create indices & select corresponding minibatch actions from target network:
+Select minibatch actions with largest Q values from model network,
+create indices & select corresponding minibatch actions from target network:
 
 ```
 def td_target(self, s_next, r, done, model_s_next_Q_val, target_Q_val):
@@ -74,10 +102,12 @@ def td_target(self, s_next, r, done, model_s_next_Q_val, target_Q_val):
 ```
 
 ---
-<br>
-**References:**
+
+## References:
 
 [Deep Reinforcement Learning with Double Q-learning
 (Hasselt, Guez & Silver, 2016)](https://arxiv.org/pdf/1509.06461.pdf)
+
+---
 
 <br>
