--- a/_posts/2019-05-30-py_mpp.md
+++ b/_posts/2019-05-30-py_mpp.md
@@ -2,12 +2,9 @@
 layout: posts
 author: Huan
 title: Python's multiprocessing package
-
 ---
 
-Python's multiprocessing package for parallel data generation.
-
-[Full code](https://github.com/ChuaCheowHuan/misc_code_examples/blob/master/py/py_mpp.ipynb)
+## Python's multiprocessing package for parallel data generation.
 
 This simple example program demonstrates how to use the Python's multiprocessing package to achieve parallel data generation.
 
@@ -15,7 +12,10 @@ The main program has a chief that spawns multiple worker processes. Each worker 
 
 Each worker has it's own local queue. When data is generated, it is stored in it's local queue. When the local queue's size is greater than 5, the data is retrieved & 0.1 is added to the data, this result is stored in the Chief's global queue. When the Chief's global queue's size is greater than 3, the result is retrieved & printed on screen.
 
+[Full code](https://github.com/ChuaCheowHuan/misc_code_examples/blob/master/py/py_mpp.ipynb)
+
 The Worker class:
+
 ```
 class Worker(object):
   def __init__(self, worker_id, g_queue):
@@ -46,6 +46,7 @@ class Worker(object):
 ```
 
 The Chief class:
+
 ```
 class Chief(object):
   def __init__(self, num_workers):
@@ -63,6 +64,7 @@ class Chief(object):
 ```
 
 The main program:      
+
 ```
 if __name__ == '__main__':  
   print('main parent process id:', os.getppid())
@@ -84,6 +86,7 @@ if __name__ == '__main__':
 ```
 
 A helper display function:
+
 ```
 def info(worker_id, process, function_name):
     print("worker_id=", worker_id,
@@ -93,3 +96,7 @@ def info(worker_id, process, function_name):
           'current process id:', os.getpid(),
           'spawn process id:', process.pid)
 ```
+
+---
+
+<br>
