--- a/_posts/2019-06-09-dist_tf.md
+++ b/_posts/2019-06-09-dist_tf.md
@@ -2,16 +2,17 @@
 layout: posts
 author: Huan
 title: Distributed Tensorflow
-
 ---
-Distributed Tensorflow with Python multiprocessing package.
+
+Distributed Tensorflow with Python multiprocessing package. This post
+demonstrates how to use distributed Tensorflow with Python's
+multiprocessing package. A tf.FIFOQueue is used as a storage across processes.
 
 [Full code](https://github.com/ChuaCheowHuan/misc_code_examples/blob/master/tf/dist_tf/dist_tf.ipynb)
 
-This post demonstrates how to use distributed Tensorflow with Python's
-multiprocessing package. A tf.FIFOQueue is used as a storage across processes.
+---
 
-Cluster definition:
+## Cluster definition:
 
 2 workers, 1 parameter server.
 ```
@@ -23,18 +24,23 @@ cluster = tf.train.ClusterSpec({
 })
 ```
 
-Parameter server function:
+---
 
-A tf.Variable (var) & a tf.FIFOQueue (q) is declared with the parameter server.
-They are both sharable across processes.
+## Parameter server function:
 
-For tf.FIFOQueue to be sharable, it has to be declared with the same device
-(in this case, the ps device) in both the parameter_server function and
+A ```tf.Variable``` (```var```) & a ```tf.FIFOQueue``` (```q```) is declared
+with the parameter server. They are both sharable across processes.
+
+For ```tf.FIFOQueue``` to be sharable, it has to be declared with the same
+device (in this case, the ps device) in both the parameter_server function and
 the worker function. A shared_name has to be given as well.
 
-The tf.Variable (var) is also declared under the ps device. The value of var is displayed in the first for loop.
+The ```tf.Variable``` (```var```) is also declared under the ps device.
+The value of var is displayed in the first for loop.
 
-At the end of the function, the values stored in q will be displayed in the last for loop.
+At the end of the function, the values stored in q will be displayed in the
+last for loop.
+
 ```
 def parameter_server():
     with tf.device("/job:ps/task:0"):
@@ -71,15 +77,16 @@ def parameter_server():
     print("Parameter server: ended...")
 ```
 
-Worker function:
+## Worker function:
 
-tf.FIFOQueue (q) is declared with the ps device. A same shared_name is also
-used.
+A ```tf.FIFOQueue``` (```q```) is declared with the ps device.
+A same shared_name is also used.
 
-The tf.Variable (var) is declared under the worker device. It does not have to
-be declared under the ps device.
+The ```tf.Variable``` (```var```) is declared under the worker device.
+It does not have to be declared under the ps device.
 
 The for loop increments the value of var and the values are stored in q.
+
 ```
 def worker(worker_n):
     with tf.device("/job:ps/task:0"):
@@ -113,9 +120,10 @@ def worker(worker_n):
     print("Worker %d: ended..." % worker_n)
 ```
 
-Main program:
+## Main program:
 
 Create the processes, run them and finally terminate them in a for loop.
+
 ```
 ps_proc = Process(target=parameter_server, daemon=True)
 w1_proc = Process(target=worker, args=(0, ), daemon=True)
@@ -133,7 +141,8 @@ for proc in [w1_proc, w2_proc, ps_proc]:
 print('All done.')            
 ```
 
-Output:
+## Output:
+
 ```
 WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/tensorflow/python/framework/op_def_library.py:263: colocate_with (from tensorflow.python.framework.ops) is deprecated and will be removed in a future version.
 Instructions for updating:
@@ -188,3 +197,7 @@ ps: r 10.0
 Parameter server: ended...
 All done.
 ```
+
+---
+
+<br>
