--- a/_posts/2019-06-25-A3C_dist_tf.md
+++ b/_posts/2019-06-25-A3C_dist_tf.md
@@ -6,14 +6,17 @@ title: A3C distributed tensorflow
 
 An A3C (Asynchronous Advantage Actor Critic) implementation with
 distributed Tensorflow & Python multiprocessing package. This is a discrete
-version.
-
-Environment from OpenAI's gym: Cartpole-v0 (discrete)
-
-[Full code](https://github.com/ChuaCheowHuan/reinforcement_learning/blob/master/A3C/A3C_disc_max_dist.ipynb): A3C (discrete) distributed Tensorflow version with N-step targets(use maximum terms possible)
+version. The code is tested with Gym's discrete action space environment,
+CartPole-v0 on Colab.
 
 The majority of the code is very similar to the [discrete](https://chuacheowhuan.github.io/A3C_disc_thread_nStep/) version with the
 exceptions highlighted in the following sections:
+
+[Full code](https://github.com/ChuaCheowHuan/reinforcement_learning/blob/master/A3C/A3C_disc_max_dist.ipynb): A3C (discrete) distributed Tensorflow version with N-step targets (use maximum terms possible)
+
+---
+
+## Key implementation details:
 
 Updating the global episode counter & adding the episodic return to a
 tf.FIFOqueue at the end of the work() function.
@@ -54,3 +57,7 @@ while True:
             GLOBAL_RUNNING_R_list.append(ep_r) # for display
         break
 ```
+
+---
+
+<br>
