--- a/_posts/2019-06-25-RDN.md
+++ b/_posts/2019-06-25-RDN.md
@@ -4,24 +4,38 @@ author: Huan
 title: RDN (Random Distillation Network) with Proximal Policy Optimization (PPO) Tensorflow
 ---
 
-Random Distillation Network (RDN) with Proximal Policy Optimization (PPO) implentation in Tensorflow. This is a continuous version which solves the mountain car continuous problem (MountainCarContinuous-v0). The RDN helps learning with curiosity driven exploration.
+Random Distillation Network (RDN) with Proximal Policy Optimization (PPO)
+implentation in Tensorflow. This is a continuous version which solves the
+mountain car continuous problem (MountainCarContinuous-v0).
+The RDN helps learning with curiosity driven exploration.
 
-The agent starts to converge correctly at around 30 episodes & reached the flag 291 times out of 300 episodes (97% hit rate).
-It takes 385.09387278556824 seconds to complete 300 episodes on Google's Colab.
+The agent starts to converge correctly at around 30 episodes & reached the flag
+291 times out of 300 episodes (97% hit rate). It takes 385.09387278556824
+seconds to complete 300 episodes on Google's Colab.
 
-Edit: A new version which corrects a numerical error(causes nan action) takes 780.2065596580505 seconds for 300 episodes. Both versions have similar results. The URL for the new version is updated.
+Edit: A new version which corrects a numerical error(causes nan action) takes
+780.2065596580505 seconds for 300 episodes. Both versions have similar results.
+The URL for the new version is updated.
 
-Checkout the <a href="https://chuacheowhuan.github.io/RDN/#charts">resulting charts</a> from program output.
+Checkout the <a href="https://chuacheowhuan.github.io/RDN/#charts">resulting
+charts</a> from the program output.
 
-Full code: [Python file](https://github.com/ChuaCheowHuan/reinforcement_learning/blob/master/RDN_PPO/RDN_PPO_cont_ftr_nsn_mtcar_php.py), [Jupyter notebook](https://github.com/ChuaCheowHuan/reinforcement_learning/blob/master/RDN_PPO/RDN_PPO_cont_ftr_nsn_mtCar_php.ipynb) (The Jupyter notebook, which also contain the resulting charts at the end, can be run directly on Google's Colab.)
+Full code:
+
+- [Python file](https://github.com/ChuaCheowHuan/reinforcement_learning/blob/master/RDN_PPO/RDN_PPO_cont_ftr_nsn_mtcar_php.py),
+
+- [Jupyter notebook](https://github.com/ChuaCheowHuan/reinforcement_learning/blob/master/RDN_PPO/RDN_PPO_cont_ftr_nsn_mtCar_php.ipynb)
+(The Jupyter notebook, which also contain the resulting charts at the end, can be run directly on Google's Colab.)
 
 ---
 
-**Notations & equations**
+## Notations & equations
 
-fixed feature from target network = $${ f (s_{t+1}) }$$
+fixed feature from target network =
+$${ f (s_{t+1}) }$$
 
-predicted feature from predictor network = $${ f ^\prime  (s_{t+1}) }$$
+predicted feature from predictor network =
+$${ f ^\prime  (s_{t+1}) }$$
 
 intrinsic reward =
 $$r_{i}$$ =
@@ -31,11 +45,12 @@ $${ f (s_{t+1}) }$$
 ||
 $${}{^2}$$
 
-For notations & equations regarding PPO, refer to this [post](https://chuacheowhuan.github.io/DPPO_dist_tf/).
+For notations & equations regarding PPO, refer to this
+[post](https://chuacheowhuan.github.io/DPPO_dist_tf/).
 
 ---
 
-**Implementation details:**
+## Key implementation details:
 
 **Preprocessing, state featurization:**
 
@@ -85,9 +100,9 @@ def featurize_batch_state(batch_states):
 
 **Preprocessing, next state normalization for RDN:**
 
-Variance is computed for the next states ```buffer_s_``` using the ```RunningStats``` class.
-
-During every training batch, the next states are normalize and clipped.
+Variance is computed for the next states ```buffer_s_``` using
+the ```RunningStats``` class. During every training batch, the next states are
+normalize and clipped.
 
 ```
 def state_next_normalize(sample_size, running_stats_s_):
@@ -109,7 +124,7 @@ if state_next_normal == True:
 
 ---
 
-**Tensorboard graphs:**
+## Tensorboard graphs:
 
 **Big picture:**
 
@@ -140,13 +155,17 @@ At every iteration, an action is sampled from policy network ```pi```.
 
 **PPO's critic:**
 
-The critic contains two value function networks. One for extrinsic rewards & one for intrinsic rewards. Two sets of TD lambda returns & advantages are also computed.
+The critic contains two value function networks. One for extrinsic rewards & one
+ for intrinsic rewards. Two sets of TD lambda returns & advantages are also
+ computed.
 
 For extrinsic rewards: ```tdlamret adv```
 
 For intrinsic rewards: ```tdlamret_i adv_i```
 
-The TD lambda returns are used as the PPO's critics targets in their respective networks while the advantages are summed & used as the advantage in the actor's loss computation.
+The TD lambda returns are used as the PPO's critics targets in their respective
+networks while the advantages are summed & used as the advantage in the actor's
+loss computation.
 
 ![image](/assets/images/RDN_PPO_tf_graph_img/PPO_c.png)
 
@@ -163,7 +182,8 @@ RDN module contains the target network & the predictor network.
 **RDN target network:**
 
 The target network is a fixed network, meaning that it's never trained.
-It's weights are randomized once during initialization. The target network is used to encode next states ```state_```. It's output are encoded next states.
+It's weights are randomized once during initialization. The target network is
+used to encode next states ```state_```. It's output are encoded next states.
 
 ![image](/assets/images/RDN_PPO_tf_graph_img/RDN_t.png)
 
@@ -171,19 +191,22 @@ It's weights are randomized once during initialization. The target network is us
 
 **RDN predictor network:**
 
-The ```predictor_loss``` is the intrinsic reward. It is the difference between the predictor network's output with the target network's output. The predictor network is trying to guess the target network's encoded output.
+The ```predictor_loss``` is the intrinsic reward. It is the difference between
+the predictor network's output with the target network's output. The predictor
+network is trying to guess the target network's encoded output.
 
 ![image](/assets/images/RDN_PPO_tf_graph_img/RDN_p.png)
 
 ---
 
-**Key to note:**
+## Key to note:
 
 All networks used in this program are linear.
 
 The actor module is basically similar to this DPPO [code](https://github.com/ChuaCheowHuan/reinforcement_learning/blob/master/DPPO/DPPO_cont_GAE_dist_GPU.ipynb) documented in this [post](https://chuacheowhuan.github.io/DPPO_dist_tf/).
 
-The difference is in the critic module. This implementation has two value functions in the critic module rather than one.
+The difference is in the critic module. This implementation has two value
+functions in the critic module rather than one.
 
 The ```predictor_loss``` is the intrinsic reward.
 
@@ -191,7 +214,7 @@ The ```predictor_loss``` is the intrinsic reward.
 
 ---
 
-**Problems encountered:**
+## Problems encountered:
 
 The actor's network occasionally returns '''nan''' for action. This happens randomly, most likely caused by exploding gradients.
 Not initializing or randomly initializing actor's weights results in nan when outputting action.
@@ -200,7 +223,7 @@ Not initializing or randomly initializing actor's weights results in nan when ou
 
 <a name="charts">
 
-**Program output:**
+## Program output:
 
 hit_counter 291 0.97
 
@@ -220,9 +243,11 @@ Moving average reward per episode:
 
 ---
 
-**References:**
+## References:
 
 [Exploration by Random Network Distillation](https://arxiv.org/pdf/1810.12894.pdf)
 (Yuri Burda, Harrison Edwards, Amos Storkey, Oleg Klimov, 2018)
 
 ---
+
+<br>
