--- a/_posts/2019-03-01-DQN.md
+++ b/_posts/2019-03-01-DQN.md
@@ -3,62 +3,57 @@ layout: posts
 author: Huan
 title: DQN
 ---
-A **Deep Q Network** implementation in tensorflow with target network & random experience replay.
 
-Environment from OpenAI's gym: CartPole-v0
+A **Deep Q Network** implementation in tensorflow with target network & random
+experience replay. The code is tested with Gym's discrete action space
+environment, CartPole-v0 on Colab.
 
 [Full code](https://github.com/ChuaCheowHuan/reinforcement_learning/tree/master/DQN_variants/DQN)
 
 ---
-<br>
 
-**Notations:**
+## Notations:
 
 Model network = $$Q_{\theta}$$ \\
 Model parameter = $$\theta$$ \\
 Model network Q value = $$Q_{\theta}$$ (s, a) \\
-<br>
+
 Target network = $$Q_{\phi}$$ \\
 Target parameter = $$\phi$$ \\
 Target network Q value = $$Q_{\phi}$$ ($$s^{'}$$, $$a^{'}$$)
 
 ---
-<br>
 
-**Equations:**
+## Equations:
 
 TD target = r (s, a) $$+$$ $$\gamma$$ $$max_{a}$$ $$Q_{\phi}$$ ($$s^{'}$$, $$a^{'}$$) \\
-<br>
+
 TD  error = (TD target) $$-$$ (Model network Q value) \\
 $$\hspace{26pt}$$
 = [r (s, a) $$+$$ $$\gamma$$ $$max_{a^{'}}$$ $$Q_{\phi}$$ ($$s^{'}$$, $$a^{'}$$)] $$-$$ $$Q_{\theta}$$ (s, a)
 
 ---
-<br>
 
-**Implementation details:**
+## Key implementation details:
 
-Update target parameter $$\phi$$ with model parameter $$\theta$$ :
-<br>
+Update target parameter $$\phi$$ with model parameter $$\theta$$.
 Copy $$\theta$$ to $$\phi$$ with *either* soft or hard parameter update.
-<br>
 
 Hard parameter update:
+
 ```
 with tf.variable_scope('hard_replace'):
   self.target_replace_hard = [t.assign(m) for t, m in zip(self.target_net_params, self.model_net_params)]   
 ```
+
 ```
 # hard params replacement
 if self.learn_step % self.tau_step == 0:
     self.sess.run(self.target_replace_hard)  
 self.learn_step += 1
 ```
-<br>
 
-Soft parameter update:
-<br>
-polyak $$\cdot$$  $$\theta$$ + (1 $$-$$ polyak)  $$\cdot$$  $$\phi$$
+Soft parameter update: polyak $$\cdot$$  $$\theta$$ + (1 $$-$$ polyak)  $$\cdot$$  $$\phi$$
 
 ```
 with tf.variable_scope('soft_replace'):            
@@ -66,17 +61,20 @@ with tf.variable_scope('soft_replace'):
                               for t, m in zip(self.target_net_params, self.model_net_params)]   
 ```
 
-<br>
 Stop TD target from contributing to gradient computation:
+
 ```
 # exclude td_target in gradient computation
 td_target = tf.stop_gradient(td_target)
 ```
----
-<br>
 
-**References:**
+---
+
+## References:
 
 [Human-level control through deep reinforcement learning
 (Mnih et al., 2015)](https://storage.googleapis.com/deepmind-media/dqn/DQNNaturePaper.pdf)
+
+---
+
 <br>
