--- a/_posts/2019-03-10-Duel_DDQN.md
+++ b/_posts/2019-03-10-Duel_DDQN.md
@@ -2,45 +2,52 @@
 layout: posts
 author: Huan
 title: Dueling DDQN
-
 ---
 
-A **Dueling Double Deep Q Network (Dueling DDQN)** implementation in tensorflow with random experience replay.
-
-Environment from OpenAI's gym: CartPole-v0
+A **Dueling Double Deep Q Network (Dueling DDQN)** implementation in tensorflow
+with random experience replay. The code is tested with Gym's discrete action
+space environment, CartPole-v0 on Colab.
 
 [Full code](https://github.com/ChuaCheowHuan/reinforcement_learning/tree/master/DQN_variants/duel_DDQN)
 
 ---
-<br>
-**Notations:**
 
-Network = $$Q_{\theta}$$ \\
-Parameter = $$\theta$$ \\
-Network Q value = $$Q_{\theta}$$ (s, a) \\
-<br>
-Value function = V(s) \\
-Advantage function = A(s, a) \\
-<br>
-Parameter from the Advantage function layer = $$\alpha$$ \\
+## Notations:
+
+Network = $$Q_{\theta}$$
+
+Parameter = $$\theta$$
+
+Network Q value =
+$$Q_{\theta}$$
+(s, a)
+
+Value function = V(s)
+
+Advantage function = A(s, a)
+
+Parameter from the Advantage function layer = $$\alpha$$
+
 Parameter from the Value function layer = $$\beta$$
 
 ---
-<br>
-**Equations:**
 
-(eqn 9) from the original paper [(Wang et al., 2015)](https://arxiv.org/pdf/1511.06581.pdf): \\
+## Equations:
+
+(eqn 9) from the original paper [(Wang et al., 2015)](https://arxiv.org/pdf/1511.06581.pdf):
+
 Q(s, a; $$\theta$$, $$\alpha$$, $$\beta$$) =
 V(s; $$\theta$$, $$\beta$$)
-$$+$$ \\
-$$\hspace{50pt}$$
+$$+$$
 [ A(s, a; $$\theta$$, $$\alpha$$)
 $$-$$
-$$\frac{1}{|A|}$$ $$\sum_{a'}$$ A(s, $$a^{'}$$; $$\theta$$, $$\alpha$$) ]
+$$\frac{1}{|A|}$$ $$\sum_{a'}$$
+A(s, $$a^{'}$$;
+$$\theta$$, $$\alpha$$) ]
 
 ---
-<br>
-**Implementation details:**
+
+## Key implementation details:
 
 V represents the value function layer, A represents the Advantage function layer:
 ```
@@ -64,10 +71,12 @@ def built_net(self, var_scope, w_init, b_init, features, num_hidden, num_output)
 ```
 
 ---
-<br>
-**References:**
+
+## References:
 
 [Dueling Network Architectures for Deep Reinforcement Learning
 (Wang et al., 2015)](https://arxiv.org/pdf/1511.06581.pdf)
+
+---
 
 <br>
