--- a/_posts/2019-03-01-DQN.md
+++ b/_posts/2019-03-01-DQN.md
@@ -14,21 +14,25 @@ environment, CartPole-v0 on Colab.
 
 ## Notations:
 
-Model network = $$Q_{\theta}$$ \\
-Model parameter = $$\theta$$ \\
-Model network Q value = $$Q_{\theta}$$ (s, a) \\
+Model network = $$Q_{\theta}$$
 
-Target network = $$Q_{\phi}$$ \\
-Target parameter = $$\phi$$ \\
+Model parameter = $$\theta$$
+
+Model network Q value = $$Q_{\theta}$$ (s, a)
+
+Target network = $$Q_{\phi}$$
+
+Target parameter = $$\phi$$
+
 Target network Q value = $$Q_{\phi}$$ ($$s^{'}$$, $$a^{'}$$)
 
 ---
 
 ## Equations:
 
-TD target = r (s, a) $$+$$ $$\gamma$$ $$max_{a}$$ $$Q_{\phi}$$ ($$s^{'}$$, $$a^{'}$$) \\
+TD target = r (s, a) $$+$$ $$\gamma$$ $$max_{a}$$ $$Q_{\phi}$$ ($$s^{'}$$, $$a^{'}$$)
 
-TD  error = (TD target) $$-$$ (Model network Q value) \\
+TD error = (TD target) $$-$$ (Model network Q value)
 $$\hspace{26pt}$$
 = [r (s, a) $$+$$ $$\gamma$$ $$max_{a^{'}}$$ $$Q_{\phi}$$ ($$s^{'}$$, $$a^{'}$$)] $$-$$ $$Q_{\theta}$$ (s, a)
 
