--- a/_posts/2019-03-01-DQN.md
+++ b/_posts/2019-03-01-DQN.md
@@ -14,7 +14,7 @@ environment, CartPole-v0 on Colab.
 
 ## Notations:
 
-Model network = $$Q_{\theta}$$
+Model network = $Q_{\theta}$
 
 Model parameter = $$\theta$$
 
@@ -30,10 +30,27 @@ Target network Q value = $$Q_{\phi}$$ ($$s^{'}$$, $$a^{'}$$)
 
 ## Equations:
 
-TD target = r (s, a) $$+$$ $$\gamma$$ $$max_{a}$$ $$Q_{\phi}$$ ($$s^{'}$$, $$a^{'}$$)
+TD target = r (s, a)
+$$+$$
+$$\gamma$$
+$$max_{a}$$
+$$Q_{\phi}$$
+($$s^{'}$$,
+$$a^{'}$$)
 
-TD error = (TD target) $$-$$ (Model network Q value)
-= [r (s, a) $$+$$ $$\gamma$$ $$max_{a^{'}}$$ $$Q_{\phi}$$ ($$s^{'}$$, $$a^{'}$$)] $$-$$ $$Q_{\theta}$$ (s, a)
+TD error =
+(TD target)
+$$-$$
+(Model network Q value)
+= [r (s, a)
+$$+$$
+$$\gamma$$
+$$max_{a^{'}}$$
+$$Q_{\phi}$$
+($$s^{'}$$,
+$$a^{'}$$)]
+$$-$$
+$$Q_{\theta}$$ (s, a)
 
 ---
 
