--- a/_posts/2019-03-01-DQN.md
+++ b/_posts/2019-03-01-DQN.md
@@ -14,50 +14,50 @@ environment, CartPole-v0 on Colab.
 
 ## Notations:
 
-Model network = $Q_{\theta}$
+Model network = $$Q_{\theta}$$
 
-Model parameter = $\theta$
+Model parameter = $$\theta$$
 
-Model network Q value = $Q_{\theta}$ (s, a)
+Model network Q value = $$Q_{\theta}$$ (s, a)
 
-Target network = $Q_{\phi}$
+Target network = $$Q_{\phi}$$
 
-Target parameter = $\phi$
+Target parameter = $$\phi$$
 
-Target network Q value = $Q_{\phi}$ ($s^{'}$, $a^{'}$)
+Target network Q value = $$Q_{\phi}$$ ($$s^{'}$$, $$a^{'}$$)
 
 ---
 
 ## Equations:
 
 TD target = r (s, a)
-$+$
-$\gamma$
-$max_{a}$
-$Q_{\phi}$
-($s^{'}$,
-$a^{'}$)
+$$+$$
+$$\gamma$$
+$$max_{a}$$
+$$Q_{\phi}$$
+($$s^{'}$$,
+$$a^{'}$$)
 
 TD error =
 (TD target)
-$-$
+$$-$$
 (Model network Q value)
 = [r (s, a)
-$+$
-$\gamma$
-$max_{a^{'}}$
-$Q_{\phi}$
-($s^{'}$,
-$a^{'}$)]
-$-$
-$Q_{\theta}$ (s, a)
+$$+$$
+$$\gamma$$
+$$max_{a^{'}}$$
+$$Q_{\phi}$$
+($$s^{'}$$,
+$$a^{'}$$)]
+$$-$$
+$$Q_{\theta}$$ (s, a)
 
 ---
 
 ## Key implementation details:
 
-Update target parameter $\phi$ with model parameter $\theta$.
-Copy $\theta$ to $\phi$ with *either* soft or hard parameter update.
+Update target parameter $$\phi$$ with model parameter $$\theta$$.
+Copy $$\theta$$ to $$\phi$$ with *either* soft or hard parameter update.
 
 Hard parameter update:
 
@@ -73,7 +73,7 @@ if self.learn_step % self.tau_step == 0:
 self.learn_step += 1
 ```
 
-Soft parameter update: polyak $\cdot$  $\theta$ + (1 $-$ polyak)  $\cdot$  $\phi$
+Soft parameter update: polyak $$\cdot$$  $$\theta$$ + (1 $$-$$ polyak)  $$\cdot$$  $$\phi$$
 
 ```
 with tf.variable_scope('soft_replace'):            
