--- a/_posts/2019-06-25-RND.md
+++ b/_posts/2019-06-25-RND.md
@@ -1,13 +1,13 @@
 ---
 layout: posts
 author: Huan
-title: RDN (Random Distillation Network) with Proximal Policy Optimization (PPO) Tensorflow
+title: RND (Random Network Distillation) with Proximal Policy Optimization (PPO) Tensorflow
 ---
 
-Random Distillation Network (RDN) with Proximal Policy Optimization (PPO)
+Random Network Distillation (RND) with Proximal Policy Optimization (PPO)
 implentation in Tensorflow. This is a continuous version which solves the
 mountain car continuous problem (MountainCarContinuous-v0).
-The RDN helps learning with curiosity driven exploration.
+The RND helps learning with curiosity driven exploration.
 
 The agent starts to converge correctly at around 30 episodes & reached the flag
 291 times out of 300 episodes (97% hit rate). It takes 385.09387278556824
@@ -17,14 +17,14 @@ Edit: A new version which corrects a numerical error(causes nan action) takes
 780.2065596580505 seconds for 300 episodes. Both versions have similar results.
 The URL for the new version is updated.
 
-Checkout the <a href="https://chuacheowhuan.github.io/RDN/#charts">resulting
+Checkout the <a href="https://chuacheowhuan.github.io/RND/#charts">resulting
 charts</a> from the program output.
 
 Full code:
 
-- [Python file](https://github.com/ChuaCheowHuan/reinforcement_learning/blob/master/RDN_PPO/RDN_PPO_cont_ftr_nsn_mtcar_php.py),
+- [Python file](https://github.com/ChuaCheowHuan/reinforcement_learning/blob/master/RND_PPO/RND_PPO_cont_ftr_nsn_mtcar_php.py),
 
-- [Jupyter notebook](https://github.com/ChuaCheowHuan/reinforcement_learning/blob/master/RDN_PPO/RDN_PPO_cont_ftr_nsn_mtCar_php.ipynb)
+- [Jupyter notebook](https://github.com/ChuaCheowHuan/reinforcement_learning/blob/master/RND_PPO/RND_PPO_cont_ftr_nsn_mtCar_php.ipynb)
 (The Jupyter notebook, which also contain the resulting charts at the end, can be run directly on Google's Colab.)
 
 ---
@@ -84,7 +84,7 @@ https://github.com/dennybritz/reinforcement-learning/blob/master/PolicyGradient/
         scaler.transform(states)) # Perform standardization by centering and scaling
 
 # state featurization of state(s) only,
-# not used on s_ for RDN's target & predictor networks
+# not used on s_ for RND's target & predictor networks
 def featurize_state(state):
     scaled = scaler.transform([state]) # Perform standardization by centering and scaling
     featurized = featurizer.transform(scaled) # Transform X separately by each transformer, concatenate results.
@@ -98,7 +98,7 @@ def featurize_batch_state(batch_states):
     return fs_list
 ```
 
-**Preprocessing, next state normalization for RDN:**
+**Preprocessing, next state normalization for RND:**
 
 Variance is computed for the next states ```buffer_s_``` using
 the ```RunningStats``` class. During every training batch, the next states are
@@ -128,13 +128,13 @@ if state_next_normal == True:
 
 **Big picture:**
 
-There are two main modules, the PPO and the RDN.
+There are two main modules, the PPO and the RND.
 
 Current state, ```state``` is passed into PPO.
 
-Next state, ```state_``` is passed into RDN.
+Next state, ```state_``` is passed into RND.
 
-![image](/assets/images/RDN_PPO_tf_graph_img/main.png)
+![image](/assets/images/RND_PPO_tf_graph_img/main.png)
 
 ---
 
@@ -142,14 +142,14 @@ Next state, ```state_``` is passed into RDN.
 
 PPO module contains the actor network & the critic network.
 
-![image](/assets/images/RDN_PPO_tf_graph_img/PPO.png)
+![image](/assets/images/RND_PPO_tf_graph_img/PPO.png)
 
 ---
 
 **PPO's actor:**
 
 At every iteration, an action is sampled from policy network ```pi```.
-![image](/assets/images/RDN_PPO_tf_graph_img/PPO_a.png)
+![image](/assets/images/RND_PPO_tf_graph_img/PPO_a.png)
 
 ---
 
@@ -167,35 +167,35 @@ The TD lambda returns are used as the PPO's critics targets in their respective
 networks while the advantages are summed & used as the advantage in the actor's
 loss computation.
 
-![image](/assets/images/RDN_PPO_tf_graph_img/PPO_c.png)
+![image](/assets/images/RND_PPO_tf_graph_img/PPO_c.png)
 
 ---
 
-**RDN module:**
+**RND module:**
 
-RDN module contains the target network & the predictor network.
+RND module contains the target network & the predictor network.
 
-![image](/assets/images/RDN_PPO_tf_graph_img/RDN.png)
+![image](/assets/images/RND_PPO_tf_graph_img/RND.png)
 
 ---
 
-**RDN target network:**
+**RND target network:**
 
 The target network is a fixed network, meaning that it's never trained.
 It's weights are randomized once during initialization. The target network is
 used to encode next states ```state_```. It's output are encoded next states.
 
-![image](/assets/images/RDN_PPO_tf_graph_img/RDN_t.png)
+![image](/assets/images/RND_PPO_tf_graph_img/RND_t.png)
 
 ---
 
-**RDN predictor network:**
+**RND predictor network:**
 
 The ```predictor_loss``` is the intrinsic reward. It is the difference between
 the predictor network's output with the target network's output. The predictor
 network is trying to guess the target network's encoded output.
 
-![image](/assets/images/RDN_PPO_tf_graph_img/RDN_p.png)
+![image](/assets/images/RND_PPO_tf_graph_img/RND_p.png)
 
 ---
 
@@ -210,7 +210,7 @@ functions in the critic module rather than one.
 
 The ```predictor_loss``` is the intrinsic reward.
 
-![image](/assets/images/RDN_PPO_tf_graph_img/key.png)
+![image](/assets/images/RND_PPO_tf_graph_img/key.png)
 
 ---
 
@@ -229,15 +229,15 @@ hit_counter 291 0.97
 
 Number of steps per episode:
 
-![image](/assets/images/RDN_PPO_tf_graph_img/output/steps.png)
+![image](/assets/images/RND_PPO_tf_graph_img/output/steps.png)
 
 Reward per episode:
 
-![image](/assets/images/RDN_PPO_tf_graph_img/output/reward.png)
+![image](/assets/images/RND_PPO_tf_graph_img/output/reward.png)
 
 Moving average reward per episode:
 
-![image](/assets/images/RDN_PPO_tf_graph_img/output/mv_avg.png)
+![image](/assets/images/RND_PPO_tf_graph_img/output/mv_avg.png)
 
 --- 385.09387278556824 seconds ---
 
