--- a/_posts/2019-06-25-RND.md
+++ b/_posts/2019-06-25-RND.md
@@ -15,7 +15,7 @@ seconds to complete 300 episodes on Google's Colab.
 
 Edit: A new version which corrects a numerical error(causes nan action) takes
 780.2065596580505 seconds for 300 episodes. Both versions have similar results.
-The URL for the new version is updated.
+The URL for the new version is updated. Added random seeds for numpy & Tensorflow global seed & ops seed achieve better consistency & faster convergence.
 
 Checkout the <a href="https://chuacheowhuan.github.io/RND/#charts">resulting
 charts</a> from the program output.
