--- a/_posts/2019-07-04-tf_graph.md
+++ b/_posts/2019-07-04-tf_graph.md
@@ -4,7 +4,7 @@ author: Huan
 title: Tensorflow graphs in Tensorboard
 ---
 
-In order to access tensorflow graphs, you need to use [Tensorboard](https://www.tensorflow.org/tensorboard/r2/get_started) which comes will Tensorflow installed.
+In order to access Tensorflow graphs, you need to use [Tensorboard](https://www.tensorflow.org/tensorboard/r2/get_started) which comes will Tensorflow installed.
 
 ```
 tf.reset_default_graph()
