--- a/_posts/2019-03-01-DQN.md
+++ b/_posts/2019-03-01-DQN.md
@@ -8,7 +8,7 @@ A **Deep Q Network** implementation in tensorflow with target network & random
 experience replay. The code is tested with Gym's discrete action space
 environment, CartPole-v0 on Colab.
 
-[Full code](https://github.com/ChuaCheowHuan/reinforcement_learning/tree/master/DQN_variants/DQN)
+Code on my [Github](https://github.com/ChuaCheowHuan/reinforcement_learning/tree/master/DQN_variants/DQN)
 
 ---
 
