--- a/_posts/2019-03-07-DDQN.md
+++ b/_posts/2019-03-07-DDQN.md
@@ -7,7 +7,7 @@ title: DDQN
 A **Double Deep Q Network (DDQN)** implementation in tensorflow with random experience replay.
 The code is tested with Gym's discrete action space environment, CartPole-v0 on Colab.
 
-[Full code](https://github.com/ChuaCheowHuan/reinforcement_learning/tree/master/DQN_variants/DDQN)
+Code on my [Github](https://github.com/ChuaCheowHuan/reinforcement_learning/tree/master/DQN_variants/DDQN)
 
 ## Notations:
 
