--- a/_posts/2019-05-30-py_mpp.md
+++ b/_posts/2019-05-30-py_mpp.md
@@ -12,7 +12,7 @@ The main program has a chief that spawns multiple worker processes. Each worker 
 
 Each worker has it's own local queue. When data is generated, it is stored in it's local queue. When the local queue's size is greater than 5, the data is retrieved & 0.1 is added to the data, this result is stored in the Chief's global queue. When the Chief's global queue's size is greater than 3, the result is retrieved & printed on screen.
 
-[Full code](https://github.com/ChuaCheowHuan/misc_code_examples/blob/master/py/py_mpp.ipynb)
+Code on my [Github](https://github.com/ChuaCheowHuan/misc_code_examples/blob/master/py/py_mpp.ipynb)
 
 The Worker class:
 
