--- a/_posts/2019-06-25-RND.md
+++ b/_posts/2019-06-25-RND.md
@@ -20,7 +20,7 @@ The URL for the new version is updated. Added random seeds for numpy & Tensorflo
 Checkout the <a href="https://chuacheowhuan.github.io/RND/#charts">resulting
 charts</a> from the program output.
 
-Full code:
+Code on my Github:
 
 - [Python file](https://github.com/ChuaCheowHuan/reinforcement_learning/blob/master/RND_PPO/RND_PPO_cont_ftr_nsn_mtcar_php.py),
 
