--- a/_posts/2019-07-04-tf_graph.md
+++ b/_posts/2019-07-04-tf_graph.md
@@ -6,6 +6,9 @@ title: Tensorflow graphs in Tensorboard
 
 In order to access Tensorflow graphs, you need to use [Tensorboard](https://www.tensorflow.org/tensorboard/r2/get_started) which comes will Tensorflow installed.
 
+The following snippet shows how to setup a ```FileWriter``` with a Tensorflow
+graph.
+
 ```
 tf.reset_default_graph()
 sess = tf.Session()
@@ -15,7 +18,8 @@ sess = tf.Session()
 
 sess.run(tf.global_variables_initializer())
 
-# Declare tf.summary.FileWriter where log is your output directory for Tensorboard & add the graph to the writer.
+# Declare tf.summary.FileWriter where log is your output directory for
+# Tensorboard & add the graph to the writer.
 writer = tf.summary.FileWriter('log', sess.graph)
 
 # Run your training loop
@@ -24,7 +28,7 @@ writer = tf.summary.FileWriter('log', sess.graph)
 writer.close()
 ```
 
-Run this command in terminal to open tensorboard:
+Run this command in terminal to start tensorboard:
 ```
 tensorboard --logdir log
 ```
