--- a/_posts/2019-06-09-dist_tf.md
+++ b/_posts/2019-06-09-dist_tf.md
@@ -8,7 +8,7 @@ Distributed Tensorflow with Python multiprocessing package. This post
 demonstrates how to use distributed Tensorflow with Python's
 multiprocessing package. A tf.FIFOQueue is used as a storage across processes.
 
-[Full code](https://github.com/ChuaCheowHuan/misc_code_examples/blob/master/tf/dist_tf/dist_tf.ipynb)
+Code on my [Github](https://github.com/ChuaCheowHuan/misc_code_examples/blob/master/tf/dist_tf/dist_tf.ipynb)
 
 ---
 
