--- a/_posts/2019-06-25-A3C_dist_tf.md
+++ b/_posts/2019-06-25-A3C_dist_tf.md
@@ -8,7 +8,7 @@ Tensorflow** & **Python multiprocessing package**. This is a **discrete**
 version with N-step targets (use maximum terms possible). The code is tested
 with Gym’s discrete action space environment, CartPole-v0 on Colab.
 
-[Full code](https://github.com/ChuaCheowHuan/reinforcement_learning/blob/master/A3C/A3C_disc_max_dist.ipynb)
+Code on my [Github](https://github.com/ChuaCheowHuan/reinforcement_learning/blob/master/A3C/A3C_disc_max_dist.ipynb)
 
 The majority of the code is very similar to the [discrete](https://chuacheowhuan.github.io/A3C_disc_thread_nStep/) version with the
 exceptions highlighted in the implementation details section:
