--- a/_posts/2019-06-09-dist_tf.md
+++ b/_posts/2019-06-09-dist_tf.md
@@ -4,6 +4,9 @@ author: Huan
 title: Distributed Tensorflow
 ---
 
+This post demonstrates a simple usage example of distributed Tensorflow with
+Python multiprocessing package.
+
 Distributed Tensorflow with Python multiprocessing package. This post
 demonstrates how to use distributed Tensorflow with Python's
 multiprocessing package. A tf.FIFOQueue is used as a storage across processes.
