--- a/_posts/2019-06-25-A3C_dist_tf.md
+++ b/_posts/2019-06-25-A3C_dist_tf.md
@@ -3,6 +3,11 @@ layout: posts
 author: Huan
 title: A3C distributed tensorflow
 ---
+
+This post documents my implementation of the A3C
+(Asynchronous Advantage Actor Critic) algorithm
+(**Distributed** discrete version).
+
 A3C (Asynchronous Advantage Actor Critic) implementation with **distributed
 Tensorflow** & **Python multiprocessing package**. This is a **discrete**
 version with N-step targets (use maximum terms possible). The code is tested
