--- a/_posts/2019-06-25-RND.md
+++ b/_posts/2019-06-25-RND.md
@@ -4,6 +4,10 @@ author: Huan
 title: RND (Random Network Distillation) with Proximal Policy Optimization (PPO) Tensorflow
 ---
 
+This post documents my implementation of the Random Network Distillation (RND)
+with Proximal Policy Optimization (PPO) algorithm.
+(**Distributed** continuous version)
+
 Random Network Distillation (RND) with Proximal Policy Optimization (PPO)
 implentation in Tensorflow. This is a continuous version which solves the
 mountain car continuous problem (MountainCarContinuous-v0).
