--- a/_posts/2019-07-04-tf_graph.md
+++ b/_posts/2019-07-04-tf_graph.md
@@ -4,6 +4,8 @@ author: Huan
 title: Tensorflow graphs in Tensorboard
 ---
 
+This post demonstrate how setup & access Tensorflow graphs in Tensorboard.
+
 In order to access Tensorflow graphs, you need to use [Tensorboard](https://www.tensorflow.org/tensorboard/r2/get_started) which comes will Tensorflow installed.
 
 The following snippet shows how to setup a ```FileWriter``` with a Tensorflow
