--- a/_posts/2019-05-30-py_mpp.md
+++ b/_posts/2019-05-30-py_mpp.md
@@ -4,6 +4,9 @@ author: Huan
 title: Python's multiprocessing package
 ---
 
+This post provides a simple usage example for the
+Python's multiprocessing package.
+
 ## Python's multiprocessing package for parallel data generation.
 
 This simple example program demonstrates how to use the Python's multiprocessing package to achieve parallel data generation.
