--- a/_posts/2019-06-09-dist_tf.md
+++ b/_posts/2019-06-09-dist_tf.md
@@ -7,9 +7,9 @@ title: Distributed Tensorflow
 This post demonstrates a simple usage example of distributed Tensorflow with
 Python multiprocessing package.
 
-Distributed Tensorflow with Python multiprocessing package. This post
-demonstrates how to use distributed Tensorflow with Python's
-multiprocessing package. A tf.FIFOQueue is used as a storage across processes.
+## Distributed Tensorflow with Python multiprocessing package. 
+
+A tf.FIFOQueue is used as a storage across processes.
 
 Code on my [Github](https://github.com/ChuaCheowHuan/misc_code_examples/blob/master/tf/dist_tf/dist_tf.ipynb)
 
