--- a/_posts/2019-05-30-py_mpp.md
+++ b/_posts/2019-05-30-py_mpp.md
@@ -4,16 +4,18 @@ author: Huan
 title: Python's multiprocessing package
 ---
 
-This post provides a simple usage example for the
-Python's multiprocessing package.
+This post demonstrates how to use the Python's multiprocessing package to
+achieve parallel data generation.
 
-## Python's multiprocessing package for parallel data generation.
+The main program has a chief that spawns multiple worker processes. Each worker
+ spawns a single work process. The work process generates random integer data
+ [1,3].
 
-This simple example program demonstrates how to use the Python's multiprocessing package to achieve parallel data generation.
-
-The main program has a chief that spawns multiple worker processes. Each worker spawns a single work process. The work process generates random integer data [1,3].
-
-Each worker has it's own local queue. When data is generated, it is stored in it's local queue. When the local queue's size is greater than 5, the data is retrieved & 0.1 is added to the data, this result is stored in the Chief's global queue. When the Chief's global queue's size is greater than 3, the result is retrieved & printed on screen.
+Each worker has it's own local queue. When data is generated, it is stored in
+it's local queue. When the local queue's size is greater than 5, the data is
+retrieved & 0.1 is added to the data, this result is stored in the Chief's
+global queue. When the Chief's global queue's size is greater than 3, the
+result is retrieved & printed on screen.
 
 Code on my [Github](https://github.com/ChuaCheowHuan/misc_code_examples/blob/master/py/py_mpp.ipynb)
 
