--- a/_posts/2019-06-25-RND.md
+++ b/_posts/2019-06-25-RND.md
@@ -6,7 +6,7 @@ title: RND (Random Network Distillation) with Proximal Policy Optimization (PPO)
 
 This post documents my implementation of the Random Network Distillation (RND)
 with Proximal Policy Optimization (PPO) algorithm.
-(**Distributed** continuous version)
+(**continuous** version)
 
 ---
 
