--- a/_posts/2019-09-02-DPDTH.md
+++ b/_posts/2019-09-02-DPDTH.md
@@ -5,7 +5,7 @@ title: Django + Postgres + Docker + Travis CI + Heroku CD
 ---
 
 Basic workflow of testing a dockerized Django & Postgres web app with Travis
-(continuous integration) & deployment to Heroku (continuous delivery).
+(continuous integration) & deployment to Heroku (continuous deployment).
 
 ---
 
@@ -424,6 +424,17 @@ The web app is running on [https://webapp-dpdth.herokuapp.com](https://webapp-dp
 
 This [link](https://webapp-dpdth.herokuapp.com/admin) brings you to the admin
 page. It is using the **Heroku's copy** of Postgres.
+
+---
+
+**Web security:**
+
+Please note that web security has not been throughly consider in this basic
+workflow describe above. **Do NOT** simply use the above workflow for
+production.
+
+For example the ```SECRET_KEY``` in the settings.py isn't dealt with at all
+and web security is really beyond the scope of this post.
 
 ---
 
