--- a/_posts/2019-09-02-DPTH.md
+++ b/_posts/2019-09-02-DPTH.md
@@ -5,10 +5,7 @@ title: Django + Postgres + Travis CI + Heroku CD
 ---
 
 Basic workflow of testing a Django & Postgres web app with Travis
-(continuous integration) & deployment to Heroku (continuous delivery).
-
-See [Github](https://chuacheowhuan.github.io/DPDTH) for a Dockerized
-version.
+(continuous integration) & deployment to Heroku (continuous deployment).
 
 ---
 
@@ -22,6 +19,11 @@ Travis & Heroku websites.
 ---
 
 Code on my [Github](https://github.com/ChuaCheowHuan/web_app_DPTH)
+
+---
+
+See [here](https://chuacheowhuan.github.io/DPDTH) for a Dockerized
+version.
 
 ---
 
@@ -237,6 +239,17 @@ The web app is running on [https://webapp-dpth.herokuapp.com](https://webapp-dpt
 
 This [link](https://webapp-dpth.herokuapp.com/admin) brings you to the admin
 page. It is using the **Heroku's copy** of Postgres.
+
+---
+
+**Web security:**
+
+Please note that web security has not been throughly consider in this basic
+workflow describe above. **Do NOT** simply use the above workflow for
+production.
+
+For example the ```SECRET_KEY``` in the settings.py isn't dealt with at all
+and web security is really beyond the scope of this post.
 
 ---
 
