--- a/_posts/2019-09-02-DPTH.md
+++ b/_posts/2019-09-02-DPTH.md
@@ -248,7 +248,7 @@ Please note that web security has not been throughly consider in this basic
 workflow describe above. **Do NOT** simply use the above workflow for
 production.
 
-For example the ```SECRET_KEY``` in the settings.py isn't dealt with at all
+For example the ```SECRET_KEY``` in the ```settings.py``` isn't dealt with at all
 and web security is really beyond the scope of this post.
 
 ---
